--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
     "@mui/styles": "^5.0.2",
+    "babel-plugin-styled-components": "^2.0.2",
     "chart.js": "^3.5.1",
     "date-fns": "^2.25.0",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "material-table": "^1.69.3",
+    "mui-datatables": "^4.0.0",
     "next": "^12.0.3-canary.7",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
@@ -33,6 +35,7 @@
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-perfect-scrollbar": "^1.5.8",
+    "styled-components": "^5.3.3",
     "uuid": "^8.3.0",
     "yup": "^0.32.9"
   },
