--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@mui/styles": "^5.0.2",
     "babel-plugin-styled-components": "^2.0.2",
     "chart.js": "^3.5.1",
-    "date-fns": "^2.25.0",
+    "date-fns": "^2.28.0",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "material-table": "^1.69.3",
@@ -33,6 +33,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
+    "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-perfect-scrollbar": "^1.5.8",
     "styled-components": "^5.3.3",
