--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mui-datatables": "^4.0.0",
     "next": "^12.0.3-canary.7",
     "next-redux-wrapper": "^7.0.5",
+    "notistack": "^2.0.3",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
