--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "1948tores",
+  "name": "AdeShexGlobals",
+  "homepage": "https://dayon.netlify.app/",
   "author": "Layinton",
   "licence": "MIT",
   "version": "1.0.0",
@@ -42,6 +43,7 @@
     "react-dom": "^17.0.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.6",
+    "react-to-print": "^2.14.3",
     "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "uuid": "^8.3.0",
