--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "history": "^5.0.0",
     "js-cookie": "^3.0.1",
     "material-table": "^1.69.3",
+    "moment": "^2.29.1",
     "mui-datatables": "^4.0.0",
     "next": "^12.0.3-canary.7",
     "next-redux-wrapper": "^7.0.5",
@@ -41,6 +42,7 @@
     "react-chartjs-2": "^3.0.4",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.6",
     "react-to-print": "^2.14.3",
