profit-loss with reciept printing

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "AdeShexGlobals",
-  "homepage": "https://dayon.netlify.app/",
+  "homepage": "/",
   "author": "Layinton",
   "licence": "MIT",
   "version": "1.0.0",
