--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "AdeShexGlobals",
-  "homepage": "/",
   "author": "Layinton",
   "licence": "MIT",
   "version": "1.0.0",
@@ -53,6 +52,7 @@
   },
   "devDependencies": {
     "eslint": "^7.32.0",
-    "eslint-config-next": "12.0.3-canary.7"
+    "eslint-config-next": "12.0.3-canary.7",
+    "@netlify/plugin-nextjs": "^4.0.0-beta.4"
   }
 }
