--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "material-table": "^1.69.3",
     "moment": "^2.29.1",
     "mui-datatables": "^4.0.0",
-    "next": "^12.0.3-canary.7",
+    "next": "^12.0.10",
     "next-redux-wrapper": "^7.0.5",
     "notistack": "^2.0.3",
     "nprogress": "^0.2.0",
