--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^2.28.0",
     "formik": "^2.1.5",
     "history": "^5.0.0",
+    "invoice-number": "^1.0.6",
     "js-cookie": "^3.0.1",
     "material-table": "^1.69.3",
     "moment": "^2.29.1",
@@ -51,8 +52,8 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.0.0-beta.4",
     "eslint": "^7.32.0",
-    "eslint-config-next": "12.0.3-canary.7",
-    "@netlify/plugin-nextjs": "^4.0.0-beta.4"
+    "eslint-config-next": "12.0.3-canary.7"
   }
 }
