--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,3 @@
 [build]
-  publish = ".next"
-
-
-  command = "npm run build"
-
-  [[plugins]]
-  package = "@netlify/plugin-nextjs"
+    command = "npm run build && npm run export"
+    publish = "out"
